--- a/Modulo2-Implantacao-Provisionamento-Automacao/Labs/cf-templates/template_redundancia.yaml
+++ b/Modulo2-Implantacao-Provisionamento-Automacao/Labs/cf-templates/template_redundancia.yaml
@@ -1,5 +1,5 @@
-AWSTemplateFormatVersion: 2022-09-09
-Description: Deploys vpc and an EC2 instance
+AWSTemplateFormatVersion: 2023-11-01
+Description: Deploys VPC, EC2 instance, and installs Grafana
 Parameters:
   InstanceTypeParameter:
     Type: String
@@ -46,21 +46,6 @@ Resources:
       Tags:
         - Key: Name
           Value: LAB_SYSOPS_PUBLIC_1
-  VPC1PublicSubnet2:
-    Type: 'AWS::EC2::Subnet'
-    Properties:
-      VpcId: !Ref VPC1
-      AvailabilityZone: !Select 
-        - '1'
-        - !GetAZs us-east-1
-      MapPublicIpOnLaunch: 'true'
-      CidrBlock: !FindInMap 
-        - Subnet1Config
-        - Public2
-        - CIDR
-      Tags:
-        - Key: Name
-          Value: LAB_SYSOPS_PUBLIC_2
   InternetGateway1:
     Type: 'AWS::EC2::InternetGateway'
     Properties:
@@ -91,11 +76,6 @@ Resources:
     Properties:
       SubnetId: !Ref VPC1PublicSubnet1
       RouteTableId: !Ref PublicRouteTable1
-  PublicSubnet1RouteTableAssociation2:
-    Type: 'AWS::EC2::SubnetRouteTableAssociation'
-    Properties:
-      SubnetId: !Ref VPC1PublicSubnet2
-      RouteTableId: !Ref PublicRouteTable1
   PublicNetworkAcl1:
     Type: 'AWS::EC2::NetworkAcl'
     Properties:
@@ -115,42 +95,6 @@ Resources:
       PortRange:
         From: '80'
         To: '80'
-  InboundHTTPSPublicNetworkAcl1Entry:
-    Type: 'AWS::EC2::NetworkAclEntry'
-    Properties:
-      NetworkAclId: !Ref PublicNetworkAcl1
-      RuleNumber: '101'
-      Protocol: '6'
-      RuleAction: allow
-      Egress: 'false'
-      CidrBlock: 0.0.0.0/0
-      PortRange:
-        From: '443'
-        To: '443'
-  InboundSSHPublicNetworkAcl1Entry:
-    Type: 'AWS::EC2::NetworkAclEntry'
-    Properties:
-      NetworkAclId: !Ref PublicNetworkAcl1
-      RuleNumber: '102'
-      Protocol: '6'
-      RuleAction: allow
-      Egress: 'false'
-      CidrBlock: 0.0.0.0/0
-      PortRange:
-        From: '22'
-        To: '22'
-  InboundEmphemeralPublicNetworkAcl1Entry:
-    Type: 'AWS::EC2::NetworkAclEntry'
-    Properties:
-      NetworkAclId: !Ref PublicNetworkAcl1
-      RuleNumber: '103'
-      Protocol: '6'
-      RuleAction: allow
-      Egress: 'false'
-      CidrBlock: 0.0.0.0/0
-      PortRange:
-        From: '1024'
-        To: '65535'
   OutboundPublicNetworkAcl1Entry:
     Type: 'AWS::EC2::NetworkAclEntry'
     Properties:
@@ -167,11 +111,6 @@ Resources:
     Type: 'AWS::EC2::SubnetNetworkAclAssociation'
     Properties:
       SubnetId: !Ref VPC1PublicSubnet1
-      NetworkAclId: !Ref PublicNetworkAcl1
-  PublicSubnet1NetworkAclAssociation2:
-    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
-    Properties:
-      SubnetId: !Ref VPC1PublicSubnet2
       NetworkAclId: !Ref PublicNetworkAcl1
   EC2Instance1:
     Type: 'AWS::EC2::Instance'
@@ -211,6 +150,25 @@ Resources:
           ToPort: 80
           IpProtocol: tcp
       GroupName: LAB_SYSOPS_SG
-      Tags:
-        - Key: Name
-          Value: LAB_SYSOPS_SG
+
+  # Adicionando a instalação e configuração do Grafana
+  EC2InstanceMonitoring:
+    Type: 'AWS::EC2::Instance'
+    Properties:
+      InstanceType: !Ref InstanceTypeParameter
+      ImageId: 'ami-0b0dcb5067f052a63'
+      UserData: 
+        Fn::Base64: 
+          !Sub |
+            #!/bin/bash
+            # Atualiza a lista de pacotes
+            sudo yum update -y
+
+            # Instala o Grafana
+            sudo yum install -y https://dl.grafana.com/oss/release/grafana-8.2.0-1.x86_64.rpm
+
+            # Habilita e inicia o serviço do Grafana
+            sudo systemctl enable grafana-server
+            sudo systemctl start grafana-server
+
+            # Configura o Graf
